@startuml Game

' InputSystem
package UnityEngine.InputSystem {
    class PlayerInput
}

' ゲーム共通
package Common {
    class GameManager <<Singleton>> {
        + ChangeState(nextState : StateEnum)
        + SetGameOver()
    }

    interface IInitializable {
        + Initialize()
    }

    GameManager --> IInitializable

    class Timer {
        + IsTimeUp : bool
        + ElapsedTime : float

        + Update(timeScale : float)
        + ResetTimer()
    }
}
' プレイヤー
package Player {
    class PlayerEvolution <<Singleton>> {
        + State : PlayerState
        + Level : float
        + Type : EvolutionType

        + AttackValue : float

        + OnDead : UnityEvent
    }
    IInitializable <|--- PlayerEvolution

    class PlayerMovement {
        + OnMove()
    }

    PlayerMovement -> PlayerEvolution
    PlayerMovement ---> PlayerInput
    Timer <--- PlayerMovement

    class PlayerAnimation {
    }

    PlayerAnimation --> PlayerEvolution

    class PlayerCollision {
    }

    PlayerCollision -> PlayerEvolution

    class PlayerEvolutionMaster {
        + maxLevel : int
    }
    PlayerEvolution --> PlayerEvolutionMaster

    class PlayerCamera {}
    PlayerCamera --> PlayerEvolution
}

package UI {
    class EvolutionGauge {
    }
    EvolutionGauge --> PlayerEvolution
}

' フィールド共通
package Field {
    interface IFieldObject {
    }
    interface IFIeldObjectGenerator {
        + Generate()
    }

    class FieldObjectGeneratorBase <<abstract>> {
    }
    IFIeldObjectGenerator <|-- FieldObjectGeneratorBase
    FieldObjectGeneratorBase -----|> IInitializable

    FieldObjectGeneratorBase "1" o-- "0..*" IFieldObject
}

' 敵
package Enemy {
    class EnemyBase {
        - hitPoint : float

        + Type : EnemyType
        + AttackValue : float
        + ApplyDamage(damage : float)
    }
    EnemyBase --|> IFieldObject

    class EnemyGenerator {
    }
    FieldObjectGeneratorBase <|--- EnemyGenerator
    EnemyGenerator "1" o-- "0..*" EnemyBase
    EnemyGenerator ----> PlayerEvolution

    EnemyGenerator --> EnemyGenerationMaster
}

' 餌
package Feed {
    class FeedBase {
        + Type : FeedType

        + PickUp()
    }
    FeedBase --|> IFieldObject

    class FeedGenerator {
    }
    FieldObjectGeneratorBase <|--- FeedGenerator
    FeedGenerator "1" o-- "0..*" FeedBase

    class FeedGenerationMasterRow {
        + level : int
        + maxCount : int
        + frequency : float
    }

    class FieldGenerationMaster {
    }
    FieldGenerationMaster "1" *-- "0..*" FeedGenerationMasterRow

    FeedGenerator --> FieldGenerationMaster



}

' 背景・その他飾り
package Background {
    class BackgroundBase {
    }
    BackgroundBase --|> IFieldObject

    class BackgroundGenerator {
    }
    FieldObjectGeneratorBase <|--- BackgroundGenerator
    BackgroundGenerator "1" o-- "0..*" BackgroundBase
    BackgroundGenerator ----> PlayerEvolution

    BackgroundGenerator --> BackgroundGenerationMaster
}

FeedBase <-- PlayerCollision
EnemyBase <-- PlayerCollision

@enduml